Added implicit usings

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,6 +5,7 @@
     <VersionPrefix></VersionPrefix>
     <Authors>Joakim Sigvald</Authors>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>XspecT</AssemblyName>
 	  <RootNamespace>XspecT</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
