--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -17,11 +17,16 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>2.1.1</PackageVersion>
+    <PackageVersion>2.2.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Updated readme</PackageReleaseNotes>
+    <PackageReleaseNotes>Breaking changes: 
+    - Renamed GetMock to The
+    - remove old The that provides the mocked pobject
+    - removed params [] from GivenThat
+    - removed virtual methods Set and Setup. 
+    All arrangements now has to be provided one by one through GivenThat (in opposite order of application)</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.18.4" />
