Added assertions Null and NotNull. Restored Set and Setup methods and added comments

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -17,16 +17,11 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>2.2.0</PackageVersion>
+    <PackageVersion>2.2.1</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Breaking changes: 
-    - Renamed GetMock to The
-    - remove old The that provides the mocked pobject
-    - removed params [] from GivenThat
-    - removed virtual methods Set and Setup. 
-    All arrangements now has to be provided one by one through GivenThat (in opposite order of application)</PackageReleaseNotes>
+    <PackageReleaseNotes>Added assertions Null and NotNull. Restored Set and Setup methods</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.18.4" />
