--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -24,6 +24,7 @@
     <PackageReleaseNotes>Generalized pipelines to provide both sync and async When-methods for up to 3 arguments</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
     <PackageReference Include="xunit" Version="2.5.0" />
