--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -7,7 +7,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>XspecT</AssemblyName>
-	  <RootNamespace>XspecT</RootNamespace>
+    <RootNamespace>XspecT</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IsPackable>true</IsPackable>
     <PackageTags>unit test specification given when then fluent mock xunit moq automock autofixture</PackageTags>
@@ -17,11 +17,15 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>4.4.7</PackageVersion>
+    <PackageVersion>4.5.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Bugfix AndDoes</PackageReleaseNotes>
+    <PackageReleaseNotes>
+      Added continuation to Throws and Does-methods in TestResult,
+      allowing several asserts of different kinds to be chained in the same expression.
+      Renamed NotThrows to DoesNotThrow
+    </PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.0" />
