Moved icon to top level folder

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -31,7 +31,7 @@
     <PackageReference Include="xunit" Version="2.6.1" />
     <None Include="..\README.md" Pack="true" PackagePath="\" />
     <None Include="..\TODO.txt" Pack="true" PackagePath="\" />
-    <None Include="images\icon.png" Pack="true" PackagePath="\" />
+    <None Include="..\icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
